src/styles/sass/main.scss
//Imports
@import "transitions.scss";
@import "animations.scss";
// Variables ====================================================================
$white  : #8A8A8A;
$black : #000000;
$okraGreen : #99b742;
$nodeColor : #3C3A3A;
$bgColor: #2E2E2E;
$grey : #C2C5C3;
$warningRed : #F44336;

// Mixins ========================================================================
@mixin border-radius($radius) {
  -webkit-border-radius: $radius;
     -moz-border-radius: $radius;
      -ms-border-radius: $radius;
          border-radius: $radius;
}

@mixin box-shadow($horizontal, $vertical, $spread, $color) {
	-webkit-box-shadow: $horizontal $vertical $spread $color;
    -moz-box-shadow: $horizontal $vertical $spread $color;
    -ms-box-shadow: $horizontal $vertical $spread $color;
	box-shadow: $horizontal $vertical $spread $color;
}
// Toolbar Styles =================================================================
md-item {
	margin: 0px 10px;
}

.username {
	text-align: center;
}

.md-toolbar-tools {
	.fa {
		font-size: 18px;
	}
}

.organization-widget {
	width: 200px;
    position: absolute;
    bottom: -180px;
    left: 15px;
    background: transparent;
    border-radius: 5px;
    border: 1px solid $okraGreen;
    padding: 10px;
    text-align: center;

    .logo {
    	width: 70px;
        margin: 0 auto;
       	display: block;
    }

    .org-name {
    	margin-top: 20px;
    	margin-bottom: 20px;
    }

    .md-raised {
    	color: #ffffff !important;
    	margin: 0 auto;
    	display: block;
    }
}
// Dialog/modal styles =========================================================
.md-dialog-container {

	md-content {
		padding-bottom: 0px;
		background-color: rgb(255,255,255) !important;
		height: initial;
		color: $bgColor;
	}

	md-tooltip {
		.md-background {
			height: 30px;
		}
	}

	.md-subheader.md-default-theme {
		background-color: transparent;
	}
}
// Toast Styles ================================================================
md-toast {
	.md-button {
		margin-top: -20px;
		margin-right: -20px;
	}
}
// Btn Styles ==================================================================
.md-raised {
	padding: 5px 10px;
}

.md-button {
	text-transform: none;
}
// Input and form fields =======================================================
md-input-container.long > input {
    width: 264px; 
}

md-checkbox:focus .md-label {
	border-color: transparent;
}

.horizontal-radio-group {

	md-radio-button:first-child {
		margin-top:15px;
	}
}

md-checkbox .md-icon {
	border-color: $white !important;
}
//Global Styles ================================================================
body {
	color: $white;
	font-family: 'Raleway', sans-serif;
}

md-content {
	height: 100vh;
	background-color: #2E2E2E !important;
}

.error-msg {
	color: $warningRed;
	opacity: 1;
}

.error-msg.ng-hide-add.ng-hide-add-active,
.error-msg.ng-hide-remove.ng-hide-remove-active {
	@include fade-in();
}

.error-msg.ng-hide {
	opacity: 0;
}

[ng\:cloak], [ng-cloak], .ng-cloak {
  display: none !important;
}

ul.list-horizontal {
	list-style: none;

	li {
		float: left;
		text-align: center;
		margin-right: 15px;
		margin-bottom: 10px;
		padding: 5px;
		@include box-shadow(0px, 2px, 6px, #888888);
		max-width: 170px;
		
		h3 {
			margin-bottom: 0px;
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;
		}

		span.sub-text {
			font-size: 12px;
			font-weight: 500;
		}
	}
}

.collapse {
	overflow: hidden;
	max-height: 0 !important;
}

.well {
	background-color: $white;
	padding: 50px 0px;
	@include border-radius(5px);
	width: 40%;
}

.md-actions-form {
	border-top: none;
	margin-top: 60px;

	button {
		margin-right: 15px;
	}
}

.fade-in.ng-enter, .fade-in.ng-leave {
  @include fade-in();
}

.horizontal-checkbox {
	float: left;
}

.status {
	position: absolute;
	left: 6px;
	top: 5px;
	font-size: 12px;

	.fa-exclamation {
		color: $warningRed;
	}

	.fa-check {
		color: $okraGreen;
	}
}

button {
	border: 0;
}
// Organization ================================================================
.organization-wrapper > [layout=row], .organization-wrapper > [layout=column] {
	@include collapse();
	max-height: 200px;
}

.organization-wrapper {
	.centered-row {
		padding: 0px 200px;
	}

	.tree-node {
		padding: 20px 20px;
		position: relative;
		background-color: $grey;
		@include border-radius(5px);
		color: $nodeColor;
		width: 155px;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
		text-decoration: none;
		text-align: center;

		md-input-container {
			padding: 0px;
			margin: 0px;
			height: 20px;

			input.short {
				width: 120px;
				padding: 0px;
				color: $white;
			}
		}
	}

	.tree-node:hover {
		@include box-shadow(0px, 2px, 6px, #888888);
	}

	.objective.active, 
	.key-result.active,
	.organization.active,
	.tree.active {

		.tree-node {
			background-color: $okraGreen;
		}
	}

	.objective {
		.tree-node:after {
			content: "OBJ";
		}
	}

	.key-result {
		.tree-node:after {
			content: "KR";
		}
	}

	.tree {
		.tree-node:after {
			content: "TR";
		}
	}

	.objective, .key-result, .tree {
		.tree-node:after {
			font-size: 12px;
			position: absolute;
			top: 7%;
			right: 5%;
			font-weight: 600;
			color: $nodeColor;
		}
	}

	.objective.add-node, .key-result.add-node {
		.tree-node:after {
			content: "";
		}
	}

	.add-node {
		font-weight: 600;

		.tree-node {
			color: $white;
			background: transparent;
			border: 2px solid;
			padding: 8px;

			.fa {
				position: absolute;
				top: 20px;
				right: 20px;
			}
		}
	}

	.task-node {
		background-color: $okraGreen;
		padding: 10px 10px;
		padding-left: 20px;
		color: $nodeColor;
		@include border-radius(5px);
		min-width: 100px;
		margin-top: 10px;
		text-decoration: none;
		width: 250px;
		position: relative;
	}

	#taskNode {
		[layout-align="start center"] {
			margin-top: -5px;
		}
		[layout-align="start center"]:first-child {
			margin-top: 25px;
		}
	}

	.objective + .objective, 
	.key-result + .key-result, 
	.organization + .organization,
	.tree + .tree  {
		margin-left: 25px;
	}

	.task-column {
		max-height: 100%;
		margin-bottom: 20px;
	}

	.task-row {
		margin-top: 25px !important;

		.md-primary {
			background: transparent !important;
			border: 2px solid;
			color: $white !important;
		}
	}

	[layout-align="center center"], [layout-align="center"], [layout-align="start center"] {
		margin-top: 25px;
	}

	.md-button {
		padding: 3px 8px;
		margin-left: 10px;
	}

	.md-button + .md-button {
		margin-top: 5px;
	}
}
//  Login ================================================================
.green-overlay {
	background-color: $okraGreen;
	color: $okraGreen;
	height: 100%;
	position: fixed !important;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	z-index: 1000;

	h1 {
		color: $white;
	}

	input {
		color: $okraGreen;
	}

	.side-nav-btn {
		margin: 0.85em 0;
		margin-left: -7px;
	}
}

// 404Error ==============================================================
.error-not-found {
	text-align: center;

	img {
		margin: 15px auto;
		width: 300px;
	}
}
// Temp Fixes to ngmaterial css =====================================
[layout=row] md-checkbox:first-child {
	margin-left: 0px;
	margin-top: 15px !important;
}

md-radio-group {
	md-radio-button:first-child {
		margin-top: 15px !important;
	}
}

